--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@ nav {
 /* Hero Section */
 
 .hero {
-    min-height: 100vh;
+    min-height: 600px;
     background: var(--gradient-1);
     position: relative;
     display: flex;
@@ -170,8 +170,8 @@ nav {
     content: '';
     position: absolute;
     inset: 0;
-    background: rgba(0, 0, 0, 0.45); /* dark overlay */
-    backdrop-filter: blur(4px);       /* soft blur */
+    background: rgba(0, 0, 0, 0.5); /* dark overlay */
+    /*backdrop-filter: blur(4px);       /* soft blur */
     z-index: 1;
 }
 
@@ -208,7 +208,7 @@ nav {
     animation: fadeInUp 0.8s ease 0.2s;
     animation-fill-mode: both;*/
 
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     color: rgba(255, 255, 255, 0.9);
     margin-bottom: 2rem;
     line-height: 1.8;
@@ -273,7 +273,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
     border: none;
     position: relative;
     overflow: hidden;
@@ -514,7 +514,7 @@ nav {
   bottom: 0;
   background-image: url("../assets/medical-texture.jpg"); 
   background-repeat: no-repeat;
-  opacity: 0.02;
+  opacity: 0.05;
   pointer-events: none;
 }
 
@@ -1483,6 +1483,11 @@ footer {
         display: flex;
     }
 
+    .hero {
+        background-size: cover; /* still fill */
+        background-position: center; /* shift focus to the top */
+    }
+
     .hero-content {
         grid-template-columns: 1fr;
         text-align: center;
@@ -1579,11 +1584,15 @@ html {
 
 /* Background slideshow keyframes */
 @keyframes heroSlideshow {
-  0%, 19%   { background-image: url("../gallery/uploads/img4.jpg"); }
-  20%, 39%  { background-image: url("../gallery/uploads/img9.jpg"); }
-  40%, 59%  { background-image: url("../gallery/uploads/img13.jpg"); }
-  60%, 79%  { background-image: url("../assets/backimg1.png"); }
-  80%, 100% { background-image: url("../assets/banner.jpg"); }
+  0%, 15%   { background-image: url("../gallery/uploads/img4.png"); }
+  16%, 25%  { background-image: url("../gallery/uploads/img9.jpg"); }
+  26%, 35%  { background-image: url("../gallery/uploads/img13.jpg"); }
+  36%, 45%  { background-image: url("../gallery/uploads/img7.jpg"); }
+  46%, 55% { background-image: url("../gallery/uploads/img10.jpg"); }
+  56%, 65% { background-image: url("../gallery/uploads/img17.jpg"); }
+  66%, 75% { background-image: url("../gallery/uploads/img16.jpg"); }
+  76%, 85% { background-image: url("../gallery/uploads/img15.jpg"); }
+  86%, 100% { background-image: url("../gallery/uploads/img14.jpg"); }
 }
 
 .read-more {
