--- a/css/index.css
+++ b/css/index.css
@@ -1770,7 +1770,7 @@ html {
   16%, 25%  { background-image: url("../gallery/uploads/img9.webp"); }
   26%, 35%  { background-image: url("../gallery/uploads/img13.webp"); }
   36%, 45%  { background-image: url("../gallery/uploads/img7.webp"); }
-  46%, 55% { background-image: url("../gallery/uploads/img10.jpg"); }
+ /* 46%, 55% { background-image: url("../gallery/uploads/img10.jpg"); } *\
   56%, 65% { background-image: url("../gallery/uploads/img17.webp"); }
   66%, 75% { background-image: url("../gallery/uploads/img16.webp"); }
   76%, 85% { background-image: url("../gallery/uploads/img15.webp"); }
